# freecad-storebro

./: .gitignore  CHANGELOG.md  CLAUDE-HOWTO.md  CLAUDE.md  PROJECT-BRIEF.md  README.md  pyproject.toml
.claude/: .sync-version  settings.json
.claude/agents/: db-agent.md  dotnet-reviewer.md  security-scanner.md  test-runner.md
.claude/docs/: agents-templates.md  conventions.md  deployment.md  git.md  graphify.md  local-llm.md  project-template.md  project.md  security.md  skills.md  spec-testing-checklist.md  spot-architecture.md  stress-testing.md  testing.md  workflows.md
.claude/rules/: allium.md  continuous-execution.md  dotnet.md  feature-pipeline.md  frontend.md  github-actions.md  project-workflow.md  security.md  spec-register.md  specs.md  spot-resilience.md  sqlite.md  tests.md  validation-followup.md  visual-fidelity-loop.md  wordpress.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/examples/: cli_quickstart.sh  deck_quickstart.py  export_quickstart.py  hull_quickstart.py
scripts/: after-specify-hook.sh  allium-hook.sh  continuous-execution-hook.sh  emit-analyze-reminder.sh  emit-clarify-reminder.sh  emit-pipeline-reminder.sh  fc_build_export.py  feature-pipeline-detect.sh  fix-hook-paths.py  graphify-bootstrap.sh  graphify-fire-hook.sh  graphify-stats.sh  local-llm-allium-drift-rank-hook.sh  local-llm-allium-openq-hook.sh  local-llm-async-audit-hook.sh  local-llm-auth-check-hook.sh  local-llm-bash-tldr-hook.sh  local-llm-branch-name-hook.sh  local-llm-call.sh  local-llm-changelog-hook.sh  local-llm-classify-hook.sh  local-llm-commit-draft-hook.sh  local-llm-detect.sh  local-llm-dockerfile-review-hook.sh  local-llm-dotenv-example-hook.sh  local-llm-gh-issue-view-hook.sh  local-llm-gh-pr-view-hook.sh  local-llm-gh-run-view-hook.sh  local-llm-gitignore-skeleton-hook.sh  local-llm-linq-perf-hook.sh  local-llm-migration-safety-hook.sh  local-llm-n1-query-hook.sh  local-llm-orientation-hook.sh  local-llm-plan-draft-hook.sh  local-llm-plan-feasibility-hook.sh  local-llm-pr-draft-hook.sh  local-llm-pr-splitter-hook.sh  local-llm-react-deps-hook.sh  local-llm-readme-skeleton-hook.sh  local-llm-secret-scan-hook.sh  (+33 more)
specs/: INDEX.md
specs/001-hull-module/: data-model.md  plan.md  quickstart.md  research.md  spec.allium  spec.md  tasks.md
specs/002-export-module/: data-model.md  plan.md  quickstart.md  research.md  spec.allium  spec.md  tasks.md
specs/003-deck-module/: plan.md  (+6 more)
tests/: conftest.py
(+489 files in other folders)
